css/style.css
/* ... */
.grid {
  display: grid;
  gap: 1.5rem;
}

/* Header (if needed) */

.header {
  width: 100%;
  position: fixed;
  bottom: 0;
  left: 0;
  z-index: var(--z-fixed);
}
/* Scroll Down Pointer*/

.scroll-downs {
  position: absolute;
  bottom: 2.5rem;
  left: 50%;
  /*margin-left: -16px;*/
  /*display: block;*/
  /*width: 32px;*/
  /*height: 55px;*/
}

/*.mousey > scroller {*/
/*  display: flex;*/
/*  justify-content: center;*/
/*  padding: 2rem;*/
/*  font-size: 1.5rem;*/
/*  width: 5px;*/
/*  height: 15px;*/
/*  border-radius: 25%;*/
/*  animation-name: scroll-d;*/
/*  animation-duration: 2.2s;*/
/*  animation-timing-function: cubic-bezier(0.15,0.41,0.69,0.94);*/
/*  animation-iteration-count: infinite;*/
/*}*/

@keyframes scroll-d {
  /* Move the scroller up and down smoothly */
  0% { transform: translateY(0); }
  50% { transform: translateY(15px); }
  100% { transform: translateY(0); }
}

#home > div > div.scroll-downs > div > div {
  font-size: 1.2rem;
  font-family: 'Kalam', cursive;
  position: relative;
  bottom: .3rem;
  margin-left: .2rem;
  animation-name: scroll-d;
  animation-duration: 2.2s;
  animation-timing-function: cubic-bezier(0.15,0.41,0.69,0.94);
  animation-iteration-count: infinite;
}

#home > div > div.scroll-downs > div > div:hover {
  cursor: pointer;
}

/*#home > div > div.scroll-downs > div > div > img {*/
/*  height: 24px;*/
/*  transform: rotate(180deg);*/
/*}*/

#home > div > div.scroll-downs > div > div > i {
  font-size: 1.5rem;
}


/* Home */

.home__content {
  display: flex;
}

.home__container {
  gap: 1rem;
}

.home__content {
  grid-template-columns: 0.5fr 3fr;
  align-items: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}


/*.home__data > p {*/
/*  width: 85%;*/
/*}*/

.home__social {
  display: grid;
  grid-template-columns: max-content;
  row-gap: 1rem;
}

.home__social-link {
  font-size: 1.25rem;
  color: var(--clr-txt-1);
}

.home__social-link:hover {
  color: var(--clr-icon-1);
}

.home__img {
  width: 17rem;
  height: auto;
  border-radius: 20%;
}

.home__data {
  grid-column: 1/3;
}

.home__title {
  font-size: var(--font-very-large);
  font-weight: var(--font-weight-medium);
}

.home__subtitle {
  font-size: var(--h2-font-size);
  color: var(--clr-txt-1);
  font-weight: 500;
  margin-bottom: var(--mb-0-75);
}

.home__data h3 {
  font-weight: var(--font-weight-light);
  margin-bottom: var(--mb-0-25);
}

.home__description {
  margin-bottom: var(--mb-2);
}

/* Buttons */

.button {
  display: inline-block;
  background-color: var(--bgColorItem);
  color: var(--bgColorMenu);
  padding: 1rem;
  border-radius: 0.5rem;
  border: 2px solid var(--bgColorMenu);
  font-weight: var(--font-weight-medium);
  transition: transform 0.3s ease-out;
}

.button:hover {
  background-color: var(--bgColorMenu);
  color: var(--clr-icon-1);
  transform: translateY(-5px);
  transition: 0.3s;
}

.button__icon {
  position: relative;
  top: 0.2rem;
  font-size: 1.25rem;
  margin-left: var(--mb-0-5);
}

#contact__button {
  background-color: var(--clr-body-1);
}

#contact__button:hover {
  background-color: var(--bgColorMenu);
  cursor: pointer;
  user-select: none;
}

#contact > div.contact__container.container.grid > div > div.home__social_2 > * {
  background-color: var(--clr-body-1);
}

#contact > div.contact__container.container.grid > div > div.home__social_2 > *:hover {
  background-color: var(--clr-txt-1);
}

body > nav > div.speech > div.social-links > div > * {
  color: var(--clr-txt-2);
}

.__dark {
  position: fixed;
  top: 5.5%;
  left: 3.5%;
  z-index: 100;
  width: 2.5rem;
  height: 2.5rem;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.2rem;
  background: transparent;
  border: 3px solid var(--clr-txt-1);
}

body > button.__dark > .fi {
  transform: translateY(.15rem);
}

/* About */

#about > div > div > div > div.about__info > * > span.about__info-name {
  font-weight: var(--font-weight-regular);
}

#about > span {
  margin-bottom: 1rem;
}

.about__description {
  text-align: center;
  margin-bottom: var(--mb-1);
}

#contact {
  margin-top: 1.5rem;
}

.about__info {
  /*display: flex;*/
  /*justify-content: space-evenly;*/
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  margin-bottom: var(--mb-1);
}

.about__info-title {
  font-size: var(--h2-font-size);
  font-weight: var(--font-weight-light);
}

.about__info-name {
  font-size: var(--h3-font-size);
  font-weight: var(--font-weight-light);
}
/*
#about > div > div > div.about__info > div:nth-child(3) > span.about__info-name > a {
  padding: .2rem;
  margin-left: .3rem;
  font-size: 1rem;
  font-weight: 400;
}

#about > div > div > div.about__info > div:nth-child(3) > span.about__info-name > a:hover {
  background-color: var(--bgColorMenu);
  color: var(--clr-body-2);
}
*/

#about > div > div > div > div.about__buttons {
  display: flex;
  flex-direction: row;
  text-align: center;
  justify-content: center;
}

#about > div > div > div > div.about__buttons > * {
  margin: 1rem 1rem 0;
}

#about > div > div > div > div.about__buttons > a:nth-child(2):hover {
  color: var(--clr-icon-1);
}

#about > div > div > div > div.about__buttons > a:nth-child(2) > span {
  position: relative;
  top: 0.2rem;
}

#about > div > div > div > div.about__buttons > a:nth-child(2) > i {
  position: relative;
  top: .25rem;
}

.about__info-title,
.about__info-name {
  display: block;
  text-align: center;
}

.about__buttons {
  display: flex;
  justify-content: center;
}

.button--flex:nth-child(1),
#about > div > div > div > div.about__buttons > a:nth-child(2) {
  background-color: var(--clr-body-1);
  color: var(--clr-txt-1);
}

.button--flex:nth-child(1):hover,
#about > div > div > div > div.about__buttons > a:nth-child(2):hover {
  background-color: var(--bgColorMenu);
  color: var(--clr-icon-1);
}

.my__skills {
  font-size: var(--h2-font-size);
}

.my__story {
  font-size: var(--h2-font-size);
}
/* ... */

